test/corpus/classes.txt
================================================================================
Basic class definition
================================================================================

class MyClass {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)))

================================================================================
Class with inheritance
================================================================================

class MyActor : Actor {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))))

================================================================================
Abstract class
================================================================================

class BaseClass abstract {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (class_flags
      (class_flag))))

================================================================================
Class with multiple flags
================================================================================

class GameActor : Actor play abstract {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (class_flags
      (class_flag)
      (class_flag))))

================================================================================
Extend class
================================================================================

extend class Actor {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (class_modifier)
    name: (type_identifier)))

================================================================================
Mixin class definition
================================================================================

mixin class MyMixin {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (class_modifier)
    name: (type_identifier)))

================================================================================
Class with replaces
================================================================================

class MyZombie : Actor replaces Zombieman {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (class_flags
      (class_flag
        (type_identifier
          (identifier))))))
